<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>20</version>
  </parent>
  <groupId>io.quarkiverse.groovy</groupId>
  <artifactId>quarkus-groovy-parent</artifactId>
  <version>999-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Quarkus Groovy - Parent</name>
  <modules>
    <module>extensions</module>
  </modules>
  <scm>
    <connection>scm:git:git@github.com:quarkiverse/quarkus-groovy.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-groovy.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-groovy</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <compiler-plugin.version>3.11.0</compiler-plugin.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.version>3.29.0</quarkus.version>
    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
    <quarkus.platform.version>${quarkus.version}</quarkus.platform.version>
    <groovy.version>4.0.28</groovy.version>
    <groovy-maven-plugin.version>4.2.1</groovy-maven-plugin.version>
    <jandex-maven-plugin.version>3.5.2</jandex-maven-plugin.version>
    <hibernate-orm.version>7.1.4.Final</hibernate-orm.version>
    <docker-maven-plugin.version>0.47.0</docker-maven-plugin.version>
    <exec-maven-plugin.version>3.6.2</exec-maven-plugin.version>
    <assertj.version>3.27.6</assertj.version>
    <script.extension>sh</script.extension>
    <docker-prune.location>${maven.multiModuleProjectDirectory}/.github/docker-prune.${script.extension}</docker-prune.location>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-test-maven</artifactId>
        <version>${quarkus.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.groovy</groupId>
        <artifactId>groovy-bom</artifactId>
        <version>${groovy.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy-deployment</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy-integration-test-shared-library</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy-junit5</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy-hibernate-orm-panache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy-hibernate-reactive-panache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.groovy</groupId>
        <artifactId>quarkus-groovy-jaxb</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>io.fabric8</groupId>
          <artifactId>docker-maven-plugin</artifactId>
          <version>${docker-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${exec-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>io.smallrye</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>${jandex-maven-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-no-runtime-deps</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <bansRuntimeDependency implementation="io.quarkus.enforcer.BansRuntimeDependency" />
              </rules>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-enforcer-rules</artifactId>
            <version>${quarkus.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>net.revelc.code.formatter</groupId>
        <artifactId>formatter-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>net.revelc.code</groupId>
        <artifactId>impsort-maven-plugin</artifactId>
        <configuration>
          <removeUnused>true</removeUnused>
        </configuration>
        <executions>
          <execution>
            <id>sort-imports</id>
            <goals>
              <goal>sort</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>docs</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>docs</module>
      </modules>
    </profile>
    <profile>
      <id>quick-build</id>
      <activation>
        <property>
          <name>quickly</name>
        </property>
      </activation>
      <build>
        <defaultGoal>clean install</defaultGoal>
      </build>
      <properties>
        <skipDocs>true</skipDocs>
        <skipITs>true</skipITs>
        <skip.gradle.tests>true</skip.gradle.tests>
        <skipTests>true</skipTests>
        <enforcer.skip>true</enforcer.skip>
      </properties>
    </profile>
    <profile>
      <id>it-examples</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>integration-tests</module>
        <module>examples</module>
      </modules>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <id>quarkus-snapshots-repository</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>quarkus-snapshots-plugin-repository</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
</project>
